--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@
   color: white;
 }
 
+.box {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
+
 .App-title {
   font-size: 1.5em;
 }
